--- a/ndex.html
+++ b/ndex.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
   </head>
   <body>
     <h2>HELLO WORLD</h2>
+    <h5>KUTTA</h5>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ab
       deserunt ad nisi aut nam provident error, laborum totam culpa.
